--- a/web.html
+++ b/web.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1> wellcome Homepage</h1>
-    <img src="./home image.jpg" alt="sandeep">
+    <img src="home image.jpg" alt="sandeep">
 </body>
 </html>
