--- a/rules.html
+++ b/rules.html
@@ -15,7 +15,7 @@
 4.Significantly different from your previous passwords.
     </b>
     <br><br>
-    <input type="submit" value="ok" formaction="./reset.html">
+    <input type="submit" value="ok" formaction="reset.html">
 </form>
     
 </body>
