--- a/reset.html
+++ b/reset.html
@@ -31,7 +31,7 @@
         id="user"
         name="user"
         placeholder="sandxxx@gmail.com">
-        <input type="submit" value="submit" formaction="login.html">
+        <input type="submit" value="submit" formaction="index.html">
         <input type="submit" value="rules for password" formaction="rules.html">
     
      </fieldset>
