--- a/registration.html
+++ b/registration.html
@@ -66,7 +66,7 @@
             name="password"
             placeholder="sandy2421"><br><br>
            <p> <input type="checkbox">The above details are correct</p>
-            <input type="submit" value="Click here for registration" formaction="login.html">
+            <input type="submit" value="Click here for registration" formaction="index.html">
             
         </fieldset>
 
